# SupermemoPARAapp

./: .gitignore  README.md  package-lock.json  package.json  server.js
public/: app.js  index.html  styles.css  viewer.html
scripts/: setupFolders.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: server-utils.test.js
