[package]
name = "supermemo-para-desktop"
version = "1.0.0"
description = "SuperMemo PARA Desktop"
authors = ["Rafael"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
